src/objects/RamaProduct__c.object
<CustomObject>
    <fields>
        <fullName>RamaManufacturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RamaManufacturer</description>
        <inlineHelpText>RamaManufacturer</inlineHelpText>
        <label>RamaManufacturer</label>
        <referenceTo>RamaManufacturer__c</referenceTo>
        <relationshipLabel>RamaProducts</relationshipLabel>
        <relationshipName>RamaProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC__c</fullName>
        <label>UPC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>size__c</fullName>
        <label>size</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>RamaProduct</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RamaProduct Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RamaProducts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>